// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders correctly with camera icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#e20074"
      name="camera"
      size={20}
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      darkGray={true}
      style={
        Object {
          "marginHorizontal": 8,
        }
      }
    >
      some text
    </Text.Primary>
  </View>
  <View
    style={
      Object {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#e20074"
      name="create"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`TextButton renders correctly with repeat icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#e20074"
      name="repeat"
      size={20}
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      darkGray={true}
      style={
        Object {
          "marginHorizontal": 8,
        }
      }
    >
      some text
    </Text.Primary>
  </View>
  <View
    style={
      Object {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#e20074"
      name="create"
      size={20}
    />
  </View>
</TouchableOpacity>
`;
